z-index bug fix for paging buttons

--- a/imports/ui/components/navigation/sideBox.less
+++ b/imports/ui/components/navigation/sideBox.less
@@ -42,7 +42,7 @@ and (min-device-width: @breakpoint) {
   line-height: @font-sidebig-lineheight;
   overflow: hidden;
   .sideBoxMain {
-    z-index: 100;
+    z-index: 40;
     position:relative;
     background-color: @color-0;
   }
