--- a/imports/ui/stylesheets/layout/header.less
+++ b/imports/ui/stylesheets/layout/header.less
@@ -33,7 +33,6 @@ and (min-device-width: @breakpoint) {
 
 // Shared properties
 #appheader {
-  z-index: 9;
   width: 0 auto;
   // height: 0.5 * @cell - 2 * @cell-margin;
   box-sizing: border-box;
@@ -78,7 +77,7 @@ and (min-device-width: @breakpoint) {
       // background-color: green;
       position: fixed;
       text-align: right;
-      z-index: 100;
+      z-index: 30;
     }
   }
 }
