--- a/imports/ui/stylesheets/layout/mainBox.less
+++ b/imports/ui/stylesheets/layout/mainBox.less
@@ -17,5 +17,5 @@ and (max-device-width: @breakpoint) {
   flex-grow: 1;
   align-items: baseline;
   flex-direction: column;
-  z-index: 100;
+  z-index: 20;
 }
